--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,10 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "pg": "^8.16.0",
     "prom-client": "^15.1.3",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
@@ -39,6 +41,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.3",
     "@types/pg": "^8.15.4",
     "@types/uuid": "^10.0.0",
