--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -309,9 +309,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
+
       - name: Update GitOps Environment
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           # Bestimme Environment basierend auf Branch
           if [[ "${{ github.ref_name }}" == "main" ]]; then
@@ -324,16 +327,20 @@ jobs:
             echo "Unknown branch, skipping GitOps update"
             exit 0
           fi
-          # Update image tags with commit SHA
+
+          # Update image tags with commit SHA (verbesserte Regex)
           sed -i "s|newTag: latest|newTag: ${{ github.sha }}|g" $ENV_PATH/kustomization.yaml
+          sed -i "s|newTag: [a-f0-9]\{40\}|newTag: ${{ github.sha }}|g" $ENV_PATH/kustomization.yaml
+
           # Check if there are changes
           if git diff --quiet; then
             echo "No changes to commit"
             exit 0
           fi
-          # Commit and push changes
+
+          # Commit und Push mit PAT
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add $ENV_PATH/kustomization.yaml
           git commit -m "chore(gitops): update images to ${{ github.sha }} from ${{ github.ref_name }}"
-          git push origin ${{ github.ref_name }}
+          git push https://x-access-token:${GH_PAT}@github.com/Loop-It-Project/Loop-It.git HEAD:${{ github.ref_name }}
