--- a/.gitignore
+++ b/.gitignore
@@ -67,9 +67,13 @@ gitops/environments/development/secrets.yaml
 
 
 # Lokale Terraform-Dateien
-.terraform/
+*.tfstate
+*.tfstate.*
+*.tfstate.backup
 .terraform.lock.hcl
-terraform.tfstate
-terraform.tfstate.backup
-crash.log
+.terraform/
+secrets.tfvars
+
 terraform.tfvars
+*.auto.tfvars
+*.auto.tfvars.json
