--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2
+          terraform_version: latest
 
       - name: Terraform Init
         run: cd terraform-eks && terraform init
@@ -63,7 +63,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2
+          terraform_version: latest
 
       - name: Terraform Init
         run: cd terraform-eks && terraform init
